Routes code added(Not complete yet)

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.home.MapsFragment"
     android:id="@+id/whereToPage"
     android:gravity="bottom"
@@ -30,6 +30,7 @@
             android:text="@string/welcome"
             android:fontFamily="@font/courgette"
             android:textColor="@android:color/black"
+            android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
@@ -43,7 +44,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:weightSum="10"
             android:orientation="horizontal">
 
