Minor change(Splash screen background changed)

--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/bg"
+        android:src="@drawable/parkedcar"
         android:scaleType="centerCrop"/>
 
     <ImageView
@@ -35,7 +35,7 @@
         android:layout_marginBottom= "-30dp"
         android:text="@string/description"
         android:textSize="30sp"
-        android:textColor="#b48811"
+        android:textColor="#DDAC29"
         android:fontFamily="@font/courgette"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
