Sort slots done

--- a/app/src/main/res/layout/activity_request_slot.xml
+++ b/app/src/main/res/layout/activity_request_slot.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.RequestSlot.RequestSlotActivity">
+    tools:context=".view.RequestSlot.RequestSlotActivity"
+    android:id="@+id/RequestSlotActivityConstraintLayout">
 
     <fragment
         android:layout_width="match_parent"
@@ -43,7 +44,7 @@
                 android:gravity="center"
                 android:layout_marginStart="60sp"/>
 
-            <!-- Sort Button with Image -->s
+            <!-- Sort Button with Image -->
             <ImageButton
                 android:layout_width="40sp"
                 android:layout_height="40sp"
