--- a/app/src/main/res/layout/advance_search_popup.xml
+++ b/app/src/main/res/layout/advance_search_popup.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="13dp">
+            android:padding="11dp">
 
             <!-- Address Icon (Vector Asset) -->
             <ImageView
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="13dp">
+            android:padding="11dp">
 
             <!-- Address Icon (Vector Asset) -->
             <ImageView
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="13dp">
+            android:padding="11dp">
 
             <!-- Address Icon (Vector Asset) -->
             <ImageView
@@ -133,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="13dp">
+            android:padding="11dp">
 
             <!-- Address Icon (Vector Asset) -->
             <ImageView
@@ -166,7 +166,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="13dp">
+            android:padding="11dp">
 
             <!-- Address Icon (Vector Asset) -->
             <ImageView
@@ -200,7 +200,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="13dp">
+            android:padding="11dp">
 
             <!-- Address Icon (Vector Asset) -->
             <ImageView
@@ -216,6 +216,40 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Distance Range"
+                android:textSize="18sp"
+                android:layout_gravity="center_vertical"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:backgroundTint="@color/quantum_grey200"
+        android:id="@+id/advance_price_range_cardView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="11dp">
+
+            <!-- Address Icon (Vector Asset) -->
+            <ImageView
+                android:layout_width="28sp"
+                android:layout_height="28sp"
+                android:src="@drawable/baseline_attach_money_24"
+                android:layout_gravity="start"
+                android:layout_marginEnd="16dp"/>
+
+            <!-- Address Text -->
+            <TextView
+                android:id="@+id/advance_price_range_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price Range"
                 android:textSize="18sp"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
@@ -350,7 +384,6 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25sp"
             android:orientation="horizontal">
 
             <CheckBox
@@ -358,22 +391,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Guard"
-                android:textSize="16sp"
-                android:layout_marginEnd="8sp"/>
+                android:textSize="16sp" />
 
             <CheckBox
                 android:id="@+id/advance_checkBoxIndoor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Indoor"
-                android:textSize="16sp"
-                android:layout_marginEnd="8sp"/>
+                android:textSize="16sp"/>
 
             <CheckBox
                 android:id="@+id/advance_checkBoxCCTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="CCTV"
+                android:textSize="16sp"/>
+            <CheckBox
+                android:id="@+id/advance_auto_approve"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Auto Approve"
                 android:textSize="16sp"/>
         </LinearLayout>
     </LinearLayout>
